# medmnist-mini-bench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: organ3d.yaml  path.yaml
notebooks/: quickstart.ipynb
scripts/: run_demo.py
src/bench/: __init__.py  data.py  models.py  train.py
tests/: test_sanity.py
